@@ -1,14 +1,14 @@
 Package: GuardianR
 Type: Package
 Title: The Guardian API Wrapper
-Version: 0.2
-Date: 2014-02-17
+Version: 0.3
+Date: 2014-02-20
 Author: Marco Toledo Bastos & Cornelius Puschmann
 Maintainer: Marco Toledo Bastos <marco@toledobastos.com>
 Imports: RCurl, RJSONIO
 Description: Provides an interface to the Open Platform's Content API of the Guardian Media Group. It retrieves content from news outlets The Observer, The Guardian, and guardian.co.uk from 1999 to current day
 License: GPL (>= 2)
-Packaged: 2014-02-17 17:23:43 UTC; toledo
+Packaged: 2014-02-20 15:29:53 UTC; toledo
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-02-17 19:08:10
+Date/Publication: 2014-02-20 18:23:27
