@@ -12,8 +12,8 @@ Provides an interface to the Open Platform's Content API of the Guardian Media G
 \tabular{ll}{
 Package: \tab GuardianR\cr
 Type: \tab Package\cr
-Version: \tab 0.2\cr
-Date: \tab 2014-02-17\cr
+Version: \tab 0.3\cr
+Date: \tab 2014-02-20\cr
 License: \tab GPL (>= 2)\cr
 }
 The results of keyword search include news articles that match the search terms and were published after 1999. Function get_guardian accepts date intervals with multiple keywords (format: "keyword1+keyword2") and returns a data frame. Rows refer to news articles and columns to the news item's data. The resulting data frame includes the following 27 columns:
@@ -91,7 +91,7 @@ And the Getting started guide (http://www.guardian.co.uk/open-platform/getting-s
 }
 
 \examples{
-results <- get_guardian(keywords="germany", 
+results <- get_guardian(keywords="ireland", 
                         from.date="2013-04-09", 
                         to.date="2013-04-09")
 }
